# p2p2s

./: README.md  client_address.txt  postgres_url.txt  query_string.sql  tokio_postgres.conf
client/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
