[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
rand = "0.8.5"
sha256 = "1.2.1"
sqlx = { version = "0.7.1", features = ["postgres"] }

tokio = { version = "1.29.1", features = ["full"] }
tokio-postgres = "0.7.10"
