[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
rand = "0.8.5"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }

tokio = { version = "1.29.1", features = ["full", "macros"] }
